# ChangeLog for games-fps/xonotic
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*xonotic-9999 (18 Jun 2010)

  18 Jun 2010; Nikoli <nikoli@lavabit.com> +xonotic-9999.ebuild,
  +metadata.xml:
  xonotic initial ebuild
