@@ -1,3 +1,5 @@
+DIST xonotic-0.1.0preview.zip 1386789859 RMD160 abcf512141e9aab970ff0a91c0c0d02ac8a3b4b9 SHA1 debda2b012e6cf423fe61435f02226746fdaf9fb SHA256 7f86a9e87d050cc490fb15e3e27142a8c2522ad84907d78dadc294bf7a687b0d
+EBUILD xonotic-0.1.0_pre.ebuild 3197 RMD160 0eff02d0edd3a9d2a9e44c50e915d6c9ebe2d008 SHA1 bf2a83a4fcd3865200a4e52789a2c4459fc38665 SHA256 4e1e7c51ad9a16666ddc46fe12ae063344bcf56dca1155601286dc88cf90e0ff
 EBUILD xonotic-9999.ebuild 6014 RMD160 5891a6ec26bd6f53df0ee83dafad684bd7d998df SHA1 4d345ed6949fc4a0428c9197acfa4e38bbc92b91 SHA256 8b2f9f44f700b5de7c4ead74d9d931f02bf8baa767b79aa655786403d0f5c7d0
-MISC ChangeLog 255 RMD160 342e9c199969559fe1b1a6f890fea1e5b24a43dd SHA1 ce24f3c64f7f14b8ff536c20b0d2260571ede49d SHA256 b76eabfbabe8b7fa63af34930d04ac884054cad71e00c1edd46bcceb242c25f1
+MISC ChangeLog 375 RMD160 aa9a42b850f0ba02590c36741cd6e303cc894bb1 SHA1 fcfc15e5ce701e9f3ebbdc9fd1128468f7d82fb6 SHA256 b7ad1568efbf86e28f9a69a563ccae031bcce7c33f2e4f0ebd5d3072848844af
 MISC metadata.xml 328 RMD160 c9a2ca482764130c8dc652b4be738d01f9cba4dc SHA1 f550b5afab2dd44ee6151c2d406208a018e73d19 SHA256 32d1d058d941314aa0097412ca00f5ff8e51ce484d11169ca070b67f4643a095
