@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*xonotic-0.1.0_pre (30 Dec 2010)
+
+  30 Dec 2010; Nikoli <nikoli@lavabit.com> +xonotic-0.1.0_pre.ebuild:
+  version bump
+
 *xonotic-9999 (18 Jun 2010)
 
   18 Jun 2010; Nikoli <nikoli@lavabit.com> +xonotic-9999.ebuild,
